--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ngunnawal Country Website</title>
+    <link rel="stylesheet" href="ngunnawal.css">
 </head>
 <body>
 
