demo of inline css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <title>Ngunnawal Country Website</title>
     <link rel="stylesheet" href="ngunnawal.css">
+    <style>
+        h2 {
+            color:blue;
+        }
+    </style>
 </head>
 <body>
 
@@ -16,7 +21,7 @@
 
 <h2>This page is made by Ryan Cather for LTC</h2>
 
-<p>
+<p style="color:green;">
     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo varius risus. Pellentesque molestie nulla ut enim venenatis, in placerat mi congue. Duis malesuada ligula sit amet feugiat ullamcorper. Vestibulum ullamcorper est vitae viverra sodales. Nulla felis purus, molestie ut viverra vitae, imperdiet sed odio. Vestibulum fermentum dapibus nibh ut consectetur. Donec sit amet euismod dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras efficitur sollicitudin augue, quis congue erat vestibulum vitae. Donec eget libero in dolor pellentesque sodales.
 </p>
 
