--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
     <meta charset="UTF-8">
     <title>Ngunnawal Country Website</title>
     <link rel="stylesheet" href="ngunnawal.css">
-    <style>
-        h2 {
-            color:blue;
-        }
-    </style>
+
+
 </head>
 <body>
 
@@ -19,22 +16,39 @@
 
 <h1>Welcome to Ngunnawal Country</h1>
 
-<h2>This page is made by Ryan Cather for LTC</h2>
+<div class="grid-container"> <!-- Overall Layout -->
+    <div> <!-- "Cell 1" -->
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo varius risus. Pellentesque molestie
+            nulla ut
+            enim venenatis, in placerat mi congue. Duis malesuada ligula sit amet feugiat ullamcorper. Vestibulum
+            ullamcorper
+            est vitae viverra sodales. Nulla felis purus, molestie ut viverra vitae, imperdiet sed odio. Vestibulum
+            fermentum
+            dapibus nibh ut consectetur. Donec sit amet euismod dui. Vestibulum ante ipsum primis in faucibus orci
+            luctus et
+            ultrices posuere cubilia curae; Cras efficitur sollicitudin augue, quis congue erat vestibulum vitae. Donec
+            eget
+            libero in dolor pellentesque sodales.
+        </p>
+    </div>
+    <div> <!-- "Cell 2" -->
+        <img src="images/ngunnawalsunset.jpeg">
+    </div>
+    <div> <!-- "Cell 3" -->
+        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam,
+            feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
+            mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat
+            wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
+            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.
+            Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam
+            erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+    </div>
+</div>
 
-<p style="color:green;">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo varius risus. Pellentesque molestie nulla ut enim venenatis, in placerat mi congue. Duis malesuada ligula sit amet feugiat ullamcorper. Vestibulum ullamcorper est vitae viverra sodales. Nulla felis purus, molestie ut viverra vitae, imperdiet sed odio. Vestibulum fermentum dapibus nibh ut consectetur. Donec sit amet euismod dui. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras efficitur sollicitudin augue, quis congue erat vestibulum vitae. Donec eget libero in dolor pellentesque sodales.
-</p>
 
-<p>
-    Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus dolor lorem, lacinia vitae maximus aliquet, tristique at dui. Phasellus quis blandit sapien, eu pellentesque lorem. Donec ac augue in massa ullamcorper faucibus vel ac leo. Morbi vitae eros justo. Etiam ultrices malesuada commodo. Etiam porta fermentum neque vel molestie. Donec pharetra, arcu quis bibendum vestibulum, est velit sollicitudin urna, eu commodo metus risus vitae massa. Duis eros magna, pharetra et diam maximus, commodo pretium dolor. Nam vehicula ultrices lorem non ultricies. Vestibulum magna sapien, volutpat ac magna accumsan, aliquet finibus metus.
-</p>
 
-<p>
-    Duis neque leo, ultricies eget congue a, accumsan et erat. Nulla vitae orci molestie, fermentum est in, placerat erat. Sed volutpat consequat nisl sit amet luctus. Praesent quis sapien mollis, varius purus et, consequat velit. Cras eget nisl sit amet nulla venenatis tempor. Praesent et eleifend magna. Pellentesque libero lacus, porttitor quis sollicitudin ut, tincidunt eget felis. Cras sit amet euismod magna, at pharetra turpis.
-</p>
 
-<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-<img src="images/ngunnawalsunset.jpeg">
 
 
 </body>
