added full width css

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 <a href="index.html">Home</a>
 <a href="profile.html">Profile</a>
 
-<h1>Welcome to Ngunnawal Country</h1>
+
 
 <div class="grid-container"> <!-- Overall Layout -->
+    <div class="full-width">
+        <h1>Welcome to Ngunnawal Country</h1>
+    </div>
     <div> <!-- "Cell 1" -->
         <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo varius risus. Pellentesque molestie
