Layout, Navbar and colour updates.

--- a/profile.html
+++ b/profile.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="ngunnawal.css">
 </head>
 <body>
-
 <!-- This is the navbar -->
-
-<a href="index.html">Home</a>
-<a href="profile.html">Profile</a>
+<div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="profile.html">Profile</a>
+</div>
 
 
 <h1>Welcome to Ngunnawal Country</h1>
