--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
 <body>
 
 <!-- This is the navbar -->
-
-<a href="index.html">Home</a>
-<a href="profile.html">Profile</a>
-
-
+<div class="navbar">
+    <a href="index.html">Home</a>
+    <a href="profile.html">Profile</a>
+</div>
 
 <div class="grid-container"> <!-- Overall Layout -->
     <div class="full-width">
@@ -35,23 +34,27 @@
             libero in dolor pellentesque sodales.
         </p>
     </div>
-    <div> <!-- "Cell 2" -->
-        <img src="images/ngunnawalsunset.jpeg">
-    </div>
-    <div> <!-- "Cell 3" -->
-        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam,
-            feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-            mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat
-            wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros
-            ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis.
-            Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam
-            erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+    <div> <!-- "Column 2" -->
+        <div> <!-- Cell 2 -->
+            <img src="images/ngunnawalsunset.jpeg">
+        </div>
+        <div> <!-- "Cell 3" -->
+            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
+                tortor quam,
+                feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
+                Aenean ultricies
+                mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
+                Vestibulum erat
+                wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt
+                condimentum, eros
+                ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut
+                felis.
+                Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.
+                Aliquam
+                erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
+        </div>
     </div>
 </div>
-
-
-
-
 
 
 </body>
