updated for tutorial

--- a/index.html
+++ b/index.html
@@ -17,42 +17,16 @@
 
 <div class="grid-container"> <!-- Overall Layout -->
     <div class="full-width">
-        <h1>Welcome to Ngunnawal Country</h1>
+        <h1>Heading</h1>
     </div>
-    <div> <!-- "Cell 1" -->
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam commodo varius risus. Pellentesque molestie
-            nulla ut
-            enim venenatis, in placerat mi congue. Duis malesuada ligula sit amet feugiat ullamcorper. Vestibulum
-            ullamcorper
-            est vitae viverra sodales. Nulla felis purus, molestie ut viverra vitae, imperdiet sed odio. Vestibulum
-            fermentum
-            dapibus nibh ut consectetur. Donec sit amet euismod dui. Vestibulum ante ipsum primis in faucibus orci
-            luctus et
-            ultrices posuere cubilia curae; Cras efficitur sollicitudin augue, quis congue erat vestibulum vitae. Donec
-            eget
-            libero in dolor pellentesque sodales.
-        </p>
+    <div class="main-content">
+        Cell 1
     </div>
-    <div> <!-- "Column 2" -->
-        <div> <!-- Cell 2 -->
-            <img src="images/ngunnawalsunset.jpeg">
-        </div>
-        <div> <!-- "Cell 3" -->
-            <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum
-                tortor quam,
-                feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper.
-                Aenean ultricies
-                mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra.
-                Vestibulum erat
-                wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt
-                condimentum, eros
-                ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut
-                felis.
-                Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat.
-                Aliquam
-                erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-        </div>
+    <div>
+        Cell 2
+    </div>
+    <div>
+        Cell 3
     </div>
 </div>
 
