--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <a href="profile.html">Profile</a>
 </div>
 
-<div class="grid-container"> <!-- Overall Layout -->
-    <div class="full-width">
+<div > <!-- Overall Layout -->
+    <div >
         <h1>Heading</h1>
     </div>
-    <div class="main-content">
+    <div >
         Cell 1
     </div>
     <div>
