--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 <body>
 
 <!-- This is the navbar -->
-<div class="navbar">
+<div >
     <a href="index.html">Home</a>
     <a href="profile.html">Profile</a>
 </div>
 
-<div > <!-- Overall Layout -->
-    <div >
+<div class="grid-container"> <!-- Overall Layout -->
+    <div class="full-width">
         <h1>Heading</h1>
     </div>
     <div >
