finished off base CSS & HTML

--- a/index.html
+++ b/index.html
@@ -5,30 +5,35 @@
     <title>Ngunnawal Country Website</title>
     <link rel="stylesheet" href="ngunnawal.css">
 
+    <style>
+<!--       Interal CSS-->
+    </style>
 
 </head>
 <body>
 
 <!-- This is the navbar -->
-<div >
+<div class="navbar">
     <a href="index.html">Home</a>
     <a href="profile.html">Profile</a>
 </div>
 
 <div class="grid-container"> <!-- Overall Layout -->
-    <div class="full-width">
-        <h1>Heading</h1>
+    <div class="full-width text-highlighting">
+        <h1 style="text-align: center">Heading</h1>
     </div>
-    <div >
+    <div class="double-height">
         Cell 1
     </div>
     <div>
         Cell 2
     </div>
-    <div>
+    <div class="text-highlighting">
         Cell 3
     </div>
 </div>
+
+<h1> Test </h1>
 
 
 </body>
