--- a/index.html
+++ b/index.html
@@ -6,17 +6,25 @@
     <link rel="stylesheet" href="ngunnawal.css">
 
     <style>
-<!--       Interal CSS-->
+        <!--
+        Interal CSS-- >
     </style>
 
 </head>
 <body>
 
+
+
 <!-- This is the navbar -->
 <div class="navbar">
+    <img src="images/NgunnawalCountryLogo.png">
     <a href="index.html">Home</a>
-    <a href="profile.html">Profile</a>
+    <a href="profile.html">History</a>
+    <a href="profile.html">Gallery</a>
+    <a href="profile.html">Contact Us</a>
+    <img src="images/NgunnawalCountryBanner.png" class="center">
 </div>
+
 
 <div class="grid-container"> <!-- Overall Layout -->
     <div class="full-width text-highlighting">
@@ -32,8 +40,6 @@
         Cell 3
     </div>
 </div>
-
-<h1> Test </h1>
 
 
 </body>
